--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.14 2003-02-27 10:04:49 knok Exp $
+# $Id: var.pl.in,v 1.15 2003-09-23 07:34:21 knok Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -105,6 +105,8 @@ $Opt{'noencodeuri'}   = 0;
 
 $Opt{'nodelete'} = 0;
 $Opt{'noupdate'} = 0;
+
+$Opt{'checkfilesize'} = 0;
 
 #-----------------------------------------------------------
 #
