--- a/tests/data/ja-mac/Makefile.am
+++ b/tests/data/ja-mac/Makefile.am
@@ -13,4 +13,12 @@ EXTRA_DIST  =   README.TXT \
 		excel2001.xls \
 		powerpoint2001.ppt \
 		word2001.doc \
-		word95.doc
+		word95.doc \
+		excel2001.htm \
+		excel5-2001.xls \
+		excel95.xls \
+		powerpoint2001.rtf \
+		powerpoint4_0.ppt \
+		word.txt \
+		word2001.htm \
+		word2001.rtf
