--- a/tests/data/ja-mac/Makefile.am
+++ b/tests/data/ja-mac/Makefile.am
@@ -11,6 +11,7 @@ EXTRA_DIST  =   README.TXT \
 		word6.doc \
 		word98.doc \
 		excel2001.xls \
+		powerpoint2001.pps \
 		powerpoint2001.ppt \
 		word2001.doc \
 		word95.doc \
