* tests/data/ja/powerpoint2002.{pps,ppt,rtf}: Added new file for testsuite.

--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -28,6 +28,9 @@ EXTRA_DIST  =   acrobat3.pdf \
 		word98.doc \
 		word2000.doc \
 		powerpoint97.ppt \
+		powerpoint2002.pps \
+		powerpoint2002.ppt \
+		powerpoint2002.rtf \
 		postscript.ps \
 	        dvi.dvi \
                 rtf.rtf \
