* pl/time.pl: Added a new file. (A rfc822time relation and a tizezone relation are included.)
* pl/Makefile.am: Added an entry for time.pl

* pl/util.pl (rfc822time): Added timezone.

* filter/rpm.pl: The format of $fileds{'date'} was changed
into rfc822time from ctime.

--- a/pl/Makefile.am
+++ b/pl/Makefile.am
@@ -17,7 +17,8 @@ perllib_DATA = \
 	util.pl \
 	var.pl \
 	wakati.pl \
-	indexer.pl
+	indexer.pl \
+	time.pl
 
 # Slightly different from perllib_DATA because of *.in files.
 EXTRA_DIST = $\
