--- a/scripts/mailutime.in
+++ b/scripts/mailutime.in
@@ -1,11 +1,12 @@
-#! @PERL@
+#! @PERL@ -w
 # -*- Perl -*-
 #
 # mailutime - a tool to unify a file time stamp with 
 #             RFC 822 'Date:' field in a mail.
 #             It also supports MHonArc messages.
-# $Id: mailutime.in,v 1.4 2002-02-19 01:27:57 knok Exp $
+# $Id: mailutime.in,v 1.5 2004-01-16 08:47:54 opengl2772 Exp $
 #
+# Version 1.0.3    [01/16/2004]
 # Version 1.0.2    [12/12/1998]
 #
 # USAGE:
@@ -21,7 +22,7 @@
 #   specified mailbox (MH format).
 #
 # Copyright (C) 1998-1999 Satoru Takabayashi  All rights reserved.
-# Copyright (C) 2002 Namazu Project All rights reserved.
+# Copyright (C) 2002-2004 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
 #
 #  This program is free software; you can redistribute it and/or modify
@@ -43,6 +44,11 @@ require 5.004;
 use strict;
 use IO::File;
 use Time::Local;
+
+my $PKGDATADIR = $ENV{'pkgdatadir'} || "/usr/local/share/namazu";
+push(@INC, $PKGDATADIR . "/pl");
+require 'time.pl';
+
 $| = 1;   # autoflush output 
 
 my %month_names = ("Jan" => 0, "Feb" => 1, "Mar" => 2, "Apr" => 3, 
@@ -52,14 +58,14 @@ my $re_month =  join '|', keys %month_names;
 my $re_day   =  '(?:0?[1-9]|[12][0-9]|3[01])';
 my $re_year  =  '(?:\d\d\d\d|\d\d)';  # allow 2 digit fomrat
 my $re_hour  =  '(?:[01][0-9]|2[0-3])';
-my $re_min   =  '(?:[012345][0-9])';
-my $re_sec   =  '(?:[012345][0-9])';
+my $re_min   =  '(?:[0-5][0-9])';
+my $re_sec   =  '(?:[0-5][0-9])';
 
 my $DebugOpt = 0;
     
 main();
 
-sub main () {
+sub main {
     foreach my $file (@ARGV) {
 	my $date;
 	my ($fh) = new IO::File;
@@ -74,7 +80,7 @@ sub main () {
 	}
 	$fh->close;
 
-	my $time = rfc822time($date);
+	my $time = time::rfc822time_to_mtime($date);
 	if ($time == -1) {
 	    print STDERR "Warning! $file: [$date] is not rfc822 format! \n";
 	    print STDERR "\t\t\t\ttrying fuzzy mode...\n";
