* filter/applefile.pl: Added a new file. AppleFile filter. * filter/Makefile.am: Added an entry for applefile.pl * tests/{ja-mknmz-3, ja-namazu-3}: Added 2 new test scripts for applefile. * tests/Makefile.am: Added an entry for ja-mknmz-3, ja-namazu-3.

--- a/filter/Makefile.am
+++ b/filter/Makefile.am
@@ -38,7 +38,9 @@ filter_DATA = bzip2.pl \
               ooo.pl \
               rtf.pl \
 	      apachecache.pl \
-	      mp3.pl
+	      mp3.pl \
+	      macbinary.pl \
+	      applefile.pl
 
 EXTRA_DIST = $(filter_DATA)
 
