--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl
 dnl configure for Namazu
-dnl $Id: configure.in,v 1.159 2004-03-04 10:44:17 knok Exp $
+dnl $Id: configure.in,v 1.160 2004-03-06 08:44:46 usu Exp $
 dnl
 dnl Created  by Satoru Takabayashi <satoru@isoternet.org> [1998-10-09]
 dnl Modified by SATOH Fumiyasu <fumiya@cij.co.jp> [1998-12-05]
@@ -12,7 +12,7 @@ dnl
 dnl *
 dnl * Process this file with autoconf to produce a configure script.
 dnl *
-AC_INIT(namazu, 2.0.13pre8)
+AC_INIT(namazu, 2.1.0)
 AC_PREREQ(2.50)               dnl Minimum Autoconf version required.
 
 
