* nmz/search.c: Bug fix: fclose(). * pl/gettext.pl.in: The processing for the character sequence containing '$' was added.

--- a/pl/gettext.pl.in
+++ b/pl/gettext.pl.in
@@ -114,7 +114,9 @@ sub mo_format_value
 
 sub _
 {
-    defined $_{$_[0]} ? $_{$_[0]} : $_[0];
+    my $msg = $_[0];
+    $msg =~ s/\$/\\\$/g;
+    defined $_{$msg} ? $_{$msg} : $_[0];
 }
 
 ## ------------------------------------------------------------ ##
