--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -37,6 +37,8 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.rtf" .   	           # Rich Text Format
 		"|.*\\.hdml|.*\\.mht" .		   # HDML MHTML
 		"|.*\\.mp3" .                      # MP3
+		"|.*\\.gnumeric" .                 # Gnumeric
+		"|.*\\.kwd|.*\\.ksp" .             # KWord, KSpread
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
