* filter/koffice.pl: Add support KPresenter file. * tests/data/ja/kpresenter.kpr: Add new file. * pl/conf.pl.in ($ALLOW_FILES): Added extensions of KPresenter.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -39,6 +39,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.mp3" .                      # MP3
 		"|.*\\.gnumeric" .                 # Gnumeric
 		"|.*\\.kwd|.*\\.ksp" .             # KWord, KSpread
+                "|.*\\.kpr" .                      # KPresenter
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
