--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -39,7 +39,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.mp3" .                      # MP3
 		"|.*\\.gnumeric" .                 # Gnumeric
 		"|.*\\.kwd|.*\\.ksp" .             # KWord, KSpread
-                "|.*\\.kpr" .                      # KPresenter
+                "|.*\\.kpr|.*\\.flw" .             # KPresenter, Kivio
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
