--- a/scripts/nmzmerge.in
+++ b/scripts/nmzmerge.in
@@ -1,7 +1,7 @@
-#! %PERL%
+#! %PERL% -w
 # -*- Perl -*-
 #
-# $Id: nmzmerge.in,v 1.2 2001-11-06 05:28:36 rug Exp $
+# $Id: nmzmerge.in,v 1.3 2004-04-19 20:32:33 opengl2772 Exp $
 #
 # nmzmerge.pl - program to merge index
 #         by furukawa@tcp-ip.or.jp
@@ -34,7 +34,7 @@ sub nmzmerge{
         $nmz1_file->close;
 
         my $nmz2_file = $nmz2->open_flist;
-        @field = (@field, (keys %{$nmz1_file->{'field'}}));
+        @field = (@field, (keys %{$nmz2_file->{'field'}}));
         $nmz2_file->close;
 
         for my $field (@field){
