* Makefile.am: 'make dist' It corrects so that autom4te.cache may be deleted. (namazu-devel-ja#04221, by Kazuhiko, thanks.)

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,6 +40,7 @@ dist-hook:
 	    rm -f $(distdir)/$$subdir/*.{bak,orig}; \
 	    rm -f $(distdir)/$$subdir/.cvsignore; \
 	    rm -f $(distdir)/$$subdir/autogen.sh; \
+	    rm -rf $(distdir)/$$subdir/autom4te.cache; \
 	    rm -rf $(distdir)/$$subdir/CVS; \
 	    rm -rf $(distdir)/$$subdir/*/CVS; \
 	done
