* filter/zip.pl: Add new filter. (namazu-users-ja#0358, Contributed by MATSUMURA Namihiko, thanks.) * tests/data/ja/zip.zip: Add new file. * pl/conf.pl.in ($ALLOW_FILES): Added extensions of ZIP.

--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -40,6 +40,7 @@ $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gnumeric" .                 # Gnumeric
 		"|.*\\.kwd|.*\\.ksp" .             # KWord, KSpread
                 "|.*\\.kpr|.*\\.flw" .             # KPresenter, Kivio
+                "|.*\\.zip" .			   # ZIP
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
