--- a/scripts/bnamazu.in
+++ b/scripts/bnamazu.in
@@ -1,8 +1,8 @@
-#! @PERL@
+#! %PERL%
 # -*- Perl -*-
 #
 # bnamazu -- search with "namazu" and browse its results with a web browser.
-# $Id: bnamazu.in,v 1.4 1999-12-24 08:35:36 satoru Exp $
+# $Id: bnamazu.in,v 1.5 2004-04-29 16:00:40 opengl2772 Exp $
 # 
 # Copyright (C) 1998 Hajime BABA. All rights reserved.
 #
